<resources>
    <string name="app_name">Intent App Manager</string>
    <string name="action_settings">Settings</string>
    <string name="you_need_to_download_another">You need to download another app for this feature</string>
    <string name="name">Name</string>
    <string name="intent">Intent</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
</resources>
